--- a/attendees_microservice/requirements.txt
+++ b/attendees_microservice/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.2
 Django==4.0.3
+django-crontab==0.7.1
 django-spa==0.3.6
 flake8==4.0.1
 idna==3.4
